# SeaLantern

./: .SRCINFO  .dockerignore  .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  AI_GUIDE.md  Agents.md  App.vue  AppLayout.vue  CHANGELOG.md  COMPONENTS.md  CONTRIBUTING-en.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  PKGBUILD  PPA-DEPLOY.md  Prompt-1  Prompt-2  Prompt-3  Prompt-4  Prompt-Dispatch-Order.md  README-en.md  README.en.md  README.md  SECURITY.md  SettingsView.vue  TODO.md  bugs.md  commitlint.config.cjs  common.ts  contributors.ts  create-ppa-deb-multi.sh  create-ppa-deb.sh  docker-compose.yml  glass.css  i18n-list.md  (+19 more)
backend/docker/: Cargo.toml
backend/docker-core/: Agents.md  Cargo.toml
backend/docker-core/src/: lib.rs
backend/docker/src/: lib.rs
backend/event/: Cargo.toml
backend/event/src/: events.rs  lib.rs
backend/java-installer/: Cargo.toml
backend/java-installer-core/: Agents.md  Cargo.toml
backend/java-installer-core/src/: lib.rs
backend/java-installer-core/tests/: core_java_runtime_checks.rs
backend/java-installer/src/: archive.rs  lib.rs  shared.rs
backend/java-installer/tests/: core_java_runtime_checks.rs
backend/lua-runtime/: Cargo.toml
backend/lua-runtime-core/: Agents.md  Cargo.toml
backend/lua-runtime-core/src/: host.rs
backend/lua-runtime/src/: lib.rs
backend/plugin-trust/: Cargo.toml
backend/plugin-trust-core/: Agents.md  Cargo.toml
backend/plugin-trust-core/src/: lib.rs  permissions.rs  trust.rs
backend/plugin-trust/src/: lib.rs
backend/runtime/: Cargo.toml
backend/runtime-core/: Agents.md  Cargo.toml
backend/runtime-core/src/: headless_http.rs  headless_runtime.rs  http_bind.rs  http_dispatch.rs  lib.rs  logging.rs  panic_report.rs  panic_report_pathing.rs  panic_report_system_info.rs  path_utils.rs  port_usage.rs  runtime_mode.rs  server_status.rs  tokio_runtime.rs
backend/runtime/src/: headless_http.rs  http_bind.rs  http_dispatch.rs  lib.rs  panic_report_pathing.rs  path_utils.rs  port_usage.rs  server_status.rs
backend/server-config/: Cargo.toml
backend/server-config-core/: Agents.md  Cargo.toml
backend/server-config-core/src/: cpu_policy.rs  discovery.rs  lib.rs  properties.rs  startup.rs  types.rs
backend/server-config/src/: cpu_policy.rs  lib.rs
backend/server-download-links/: Cargo.toml
backend/server-download-links-core/: Agents.md  Cargo.toml
backend/server-download-links/src/: lib.rs
backend/server-installer/: Cargo.toml
backend/server-installer-core/: Agents.md  Cargo.toml
backend/server-installer-core/src/: archive.rs  core_type.rs  lib.rs  mc_version.rs  parser.rs
backend/server-installer-core/tests/: core_archive_checks.rs
backend/server-installer/src/: core_type.rs  lib.rs  mc_version.rs  parser.rs
backend/server-installer/tests/: core_archive_checks.rs
backend/server-local-setup/: Cargo.toml
backend/server-local-setup-core/: Agents.md  Cargo.toml
backend/server-local-setup-core/src/: lib.rs
backend/server-local-setup/src/: lib.rs
backend/server-local-setup/tests/: core_local_paths.rs
backend/server-log/: Cargo.toml
backend/server-log-core/: Agents.md  Cargo.toml
backend/server-log-core/src/: lib.rs  output_reader.rs  reader.rs  state.rs  writer.rs
backend/server-log/src/: lib.rs  output_reader.rs  state.rs
backend/server-plugin/: Cargo.toml
backend/server-plugin-core/: Agents.md  Cargo.toml
backend/server-plugin-core/src/: lib.rs
backend/server-plugin/src/: lib.rs
backend/server-startup-scan/: Cargo.toml
backend/server-startup-scan-core/: Agents.md  Cargo.toml
backend/server-startup-scan-core/src/: lib.rs
backend/server-startup-scan/src/: lib.rs
backend/starter-links/: Cargo.toml
backend/starter-links-core/: Agents.md  Cargo.toml
backend/starter-links-core/src/: cache.rs  lib.rs  parser.rs  version.rs
backend/starter-links/src/: lib.rs
backend/tauri-host/: Agents.md  Cargo.toml  build.rs  tauri.conf.json
backend/tauri-host/capabilities/: default.json
backend/tauri-host/icons/: icon.icns
backend/tauri-host/locales/: de-DE.json  en-US.json  ru-RU.json  zh-CN.json
backend/tauri-host/src/: lib.rs  main.rs
backend/tauri-host/src/adapters/http/: command_registry.rs  command_registry_stub.rs  mod.rs  server.rs  server_stub.rs
backend/tauri-host/src/commands/: mod.rs
backend/tauri-host/src/commands/app/: common.rs  debug.rs  host.rs  i18n.rs  logging.rs  mod.rs  settings.rs  ui_shell.rs
backend/tauri-host/src/commands/downloads/: java.rs  mod.rs  mods.rs  transfers.rs
backend/tauri-host/src/commands/online/: join.rs  mod.rs  tunnel.rs  (+1 more)
backend/tauri-host/src/hardcode_data/: app_files.rs  mod.rs  plugin_manifest.rs  plugin_permissions.rs  server_downloads.rs  update_sources.rs
backend/tauri-host/src/models/: download.rs  mod.rs  plugin.rs  server.rs  settings.rs
backend/tauri-host/src/plugins/: api.rs  loader.rs  manager.rs  mod.rs
backend/tauri-host/src/runtime/: bootstrap.rs  command_catalog.rs  desktop_setup.rs  desktop_shell.rs  frontend_runtime_event_bridge.rs  mod.rs  mode.rs  plugin_bridge.rs  plugin_bridge_stub.rs
backend/tauri-host/src/services/: data_dir.rs  desktop_web.rs  event_consumer_registry.rs  events.rs  global.rs  i18n.rs  locale_json.rs  mod.rs  mod_manager.rs  plugin_dir.rs  plugin_trusted_catalog.rs  settings_manager.rs  ui_shell.rs  web_auth.rs
backend/tauri-host/src/utils/: app_version.rs  cli.rs  constants.rs  docker_cli.rs  logger.rs  mod.rs  path.rs  port_usage.rs  server_status.rs
backend/tauri-host/tests/: ui_smoke.rs
backend/tauri-host/tests/unit/: adapters_http_command_registry_tests.rs  commands_update_version_tests.rs  plugins_loader_tests.rs  plugins_runtime_filesystem_test.rs  plugins_runtime_security_test.rs  services_settings_manager_tests.rs  utils_path_tests.rs
server/: Cargo.toml
server/src/: lib.rs  observability.rs
server/src/rpc/: access.rs  axum.rs  context.rs  contract.rs  error.rs  lifecycle.rs  method_name.rs  mod.rs  response.rs
server/src/rpc/methods/: mod.rs
server/src/rpc/service/: console.rs  mod.rs  runtime.rs
(+2306 files in other folders)
