[package]
name = "sealantern-server"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
path = "src/lib.rs"

[dependencies]
sealantern-core = { path = "../crates/core" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
