[package]
name = "sea-lantern-docker-core"
version = "0.1.0"
edition = "2021"
description = "Shared Docker types and pure helper logic for Sea Lantern"

[lib]
name = "sea_lantern_docker_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sea_lantern_server_config_core = { package = "sea-lantern-server-config-core", path = "../server-config-core" }
