[package]
name = "sea-lantern-lua-runtime-core"
version = "0.1.0"
edition = "2021"
description = "Host-facing runtime boundary for Sea Lantern Lua plugins"

[lib]
name = "sea_lantern_lua_runtime_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
