[package]
name = "lua-runtime"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
description = "Host-facing runtime boundary for Sea Lantern Lua plugins"

[lib]
name = "lua_runtime"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
