[package]
name = "sea-lantern-plugin-trust-core"
version = "0.1.0"
edition = "2021"
description = "Shared plugin trust, permission policy, and install metadata logic for Sea Lantern"

[lib]
name = "sea_lantern_plugin_trust_core"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
