[package]
name = "plugin-trust"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
description = "Shared plugin trust, permission policy, and install metadata logic for Sea Lantern"

[lib]
name = "plugin_trust"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
