[package]
name = "runtime"
version.workspace = true
edition.workspace = true
description = "Shared backend runtime utilities for Sea Lantern"

[lib]
name = "runtime"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
dirs-next = "2"
futures = "0.3"
http = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.32"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "net"] }
uuid = { version = "1", features = ["v4"] }
