[package]
name = "sea-lantern-server-config-core"
version = "0.1.0"
edition = "2021"
description = "Shared server.properties parsing and rendering logic for Sea Lantern"

[lib]
name = "sea_lantern_server_config_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
