[package]
name = "server-config"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
description = "Shared server.properties parsing and rendering logic for Sea Lantern"

[lib]
name = "server_config"
path = "src/lib.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
