[package]
name = "sea-lantern-server-download-links-core"
version = "0.1.0"
edition = "2021"
description = "Shared server download links parsing logic for Sea Lantern"

[lib]
name = "sea_lantern_server_download_links_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
