[package]
name = "server-download-links"
version.workspace = true
edition.workspace = true
description = "Shared server download links parsing logic for Sea Lantern"

[lib]
name = "server_download_links"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
