[package]
name = "sea-lantern-server-installer-core"
version = "0.1.0"
edition = "2021"
description = "Shared server installer detection and archive logic for Sea Lantern"

[lib]
name = "sea_lantern_server_installer_core"
path = "src/lib.rs"
test = false

[[test]]
name = "core_archive_checks"
path = "tests/core_archive_checks.rs"

[dependencies]
flate2 = "1.0"
serde = { version = "1", features = ["derive"] }
sl-server-core-taxonomy = "0.1.0"
tar = "0.4"
uuid = { version = "1", features = ["v4"] }
zip = "2.0"

[dev-dependencies]
tempfile = "3"
