[package]
name = "server-installer"
version.workspace = true
edition.workspace = true
description = "Shared server installer detection and archive logic for Sea Lantern"

[lib]
name = "server_installer"
path = "src/lib.rs"
test = false

[[test]]
name = "core_archive_checks"
path = "tests/core_archive_checks.rs"

[dependencies]
flate2 = "1.0"
serde = { version = "1", features = ["derive"] }
sl-server-core-taxonomy = "0.1.1"
tar = "0.4"
uuid = { version = "1", features = ["v4"] }
zip = "2.0"

[dev-dependencies]
tempfile = "3"
