[package]
name = "sea-lantern-server-local-setup-core"
version = "0.1.0"
edition = "2021"
description = "Shared local server setup path and metadata helpers for Sea Lantern"

[lib]
name = "sea_lantern_server_local_setup_core"
path = "src/lib.rs"
test = false

[[test]]
name = "core_local_paths"
path = "tests/core_local_paths.rs"

[dependencies]
encoding_rs = "0.8"
once_cell = "1"
regex = "1.10"
sea_lantern_runtime = { package = "sea-lantern-runtime", path = "../runtime-core" }
sea_lantern_server_installer_core = { package = "sea-lantern-server-installer-core", path = "../server-installer-core" }
shlex = "1.3.0"

[dev-dependencies]
tempfile = "3"
