[package]
name = "server-local-setup"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
description = "Shared local server setup path and metadata helpers for Sea Lantern"

[lib]
name = "server_local_setup"
path = "src/lib.rs"
test = false

[[test]]
name = "core_local_paths"
path = "tests/core_local_paths.rs"

[dependencies]
encoding_rs = "0.8"
once_cell = "1"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
runtime = { package = "runtime", path = "../runtime" }
server_installer = { package = "server-installer", path = "../server-installer" }
shlex = "1.3.0"
sl-server-core-taxonomy = "0.1.1"

[dev-dependencies]
tempfile = "3"
