[package]
name = "sea-lantern-server-log-core"
version = "0.1.0"
edition = "2021"
description = "Shared server log persistence, reading, output ingestion, and structured event mapping for Sea Lantern"

[lib]
name = "sea_lantern_server_log_core"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
sea_lantern_server_local_setup_core = { package = "sea-lantern-server-local-setup-core", path = "../server-local-setup-core" }
sl-server-info = { path = "../../../libservercore/crates/sl-server-info" }

[dev-dependencies]
tempfile = "3"
