[package]
name = "sea-lantern-server-plugin-core"
version = "0.1.0"
edition = "2021"
description = "Shared server plugin parsing and listing logic for Sea Lantern"

[lib]
name = "sea_lantern_server_plugin_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
zip = "2.0"
sea_lantern_server_installer_core = { package = "sea-lantern-server-installer-core", path = "../server-installer-core" }
sl-server-flavor-core = "0.2.1"

[dev-dependencies]
tempfile = "3"
