[package]
name = "server-plugin"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
description = "Shared server plugin parsing and listing logic for Sea Lantern"

[lib]
name = "server_plugin"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
zip = "2.0"
server_installer = { package = "server-installer", path = "../server-installer" }
sl-server-flavor-core = "0.2.1"

[dev-dependencies]
tempfile = "3"
