[package]
name = "sea-lantern-server-startup-scan-core"
version = "0.1.0"
edition = "2021"
description = "Shared startup candidate scanning logic for Sea Lantern"

[lib]
name = "sea_lantern_server_startup_scan_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sea_lantern_server_installer_core = { package = "sea-lantern-server-installer-core", path = "../server-installer-core" }
sl-server-core-taxonomy = "0.1.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
zip = "2.0"
