[package]
name = "starter-links"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
description = "Shared starter installer links parsing logic for Sea Lantern"

[lib]
name = "starter_links"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "time"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Security"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
