[package]
name = "sea-lantern"
version = "1.2.0"
description = "Minecraft Server Manager"
authors = ["FPS_Z"]
edition = "2021"
default-run = "sea-lantern"

[lib]
name = "sea_lantern_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sea_lantern_runtime = { package = "sea-lantern-runtime", path = "../runtime-core" }
sea_lantern_java_installer_core = { package = "sea-lantern-java-installer-core", path = "../java-installer-core" }
sea_lantern_server_download_links_core = { package = "sea-lantern-server-download-links-core", path = "../server-download-links-core" }
sea_lantern_server_installer_core = { package = "sea-lantern-server-installer-core", path = "../server-installer-core" }
sea_lantern_server_plugin_core = { package = "sea-lantern-server-plugin-core", path = "../server-plugin-core" }
sea_lantern_server_local_setup_core = { package = "sea-lantern-server-local-setup-core", path = "../server-local-setup-core" }
sea_lantern_server_startup_scan_core = { package = "sea-lantern-server-startup-scan-core", path = "../server-startup-scan-core" }
sea_lantern_server_config_core = { package = "sea-lantern-server-config-core", path = "../server-config-core" }
sea_lantern_starter_links_core = { package = "sea-lantern-starter-links-core", path = "../starter-links-core" }
sea_lantern_update_core = { package = "sea-lantern-update-core", path = "../update-core" }
sea_lantern_docker_core = { package = "sea-lantern-docker-core", path = "../docker-core" }
sl-libscv = "0.1.2"
sl-server-info = "0.1.0"
sl-server-flavor-core = "0.2.1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.0.0"
tokio-util = "0.7.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
once_cell = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "io-util",
    "net",
    "time",
    "sync",
] }
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-http = "2.5.7"
sysinfo = "0.32"
axum = { version = "0.8", features = ["multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
mime_guess = { version = "2.0", optional = true }
futures = "0.3.32"
encoding_rs = "0.8"
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }
zip = "2.0"
tar = "0.4"
flate2 = "1.0"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
    "ico",
] }
url = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
ipnet = "2.10"
chrono = "0.4"
lazy_static = "1.4"
shlex = "1.3.0"
rcon = { version = "0.6", features = ["rt-tokio"] }
sculk = { version = "0.3.0-rc.1", features = ["persist", "clipboard"] }
java-manager = "0.3.0"

[features]
default = ["docker"]
docker = ["axum", "tower", "tower-http", "tokio-stream", "mime_guess"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Performance",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
window-vibrancy = "0.6.0"
tauri-plugin-window-state = "2"
font-kit = "0.14"
opener = "0.7"
trash = "5.1"
tauri-plugin-notification = "2"

[dev-dependencies]
tempfile = "3"
