[package]
name = "sea-lantern"
version.workspace = true
description = "Minecraft Server Manager"
authors = ["FPS_Z"]
edition.workspace = true
license = "GPL-3.0-only"
default-run = "sea-lantern"

[lib]
name = "sea_lantern"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
runtime = { package = "runtime", path = "../runtime" }
event = { package = "event", path = "../event" }
i18n = { package = "i18n", path = "../i18n" }
lua_runtime = { package = "lua-runtime", path = "../lua-runtime", optional = true }
java_installer = { package = "java-installer", path = "../java-installer" }
server_download_links = { package = "server-download-links", path = "../server-download-links" }
server_installer = { package = "server-installer", path = "../server-installer" }
server_plugin = { package = "server-plugin", path = "../server-plugin" }
server_local_setup = { package = "server-local-setup", path = "../server-local-setup" }
server_startup_scan = { package = "server-startup-scan", path = "../server-startup-scan" }
server_config = { package = "server-config", path = "../server-config" }
plugin_trust = { package = "plugin-trust", path = "../plugin-trust" }
server_log = { package = "server-log", path = "../server-log" }
starter_links = { package = "starter-links", path = "../starter-links" }
update = { package = "update", path = "../update" }
docker = { package = "docker", path = "../docker" }
sl-libscv = "0.1.2"
sl-server-info = "0.1.0"
sl-server-flavor-core = "0.2.1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tokio-util = "0.7.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
once_cell = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "process",
    "io-util",
    "net",
    "time",
    "sync",
] }
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-http = "2.5.7"
sysinfo = "0.32"
axum = { version = "0.8", features = ["multipart", "ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
mime_guess = { version = "2.0", optional = true }
futures = "0.3.32"
encoding_rs = "0.8"
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"], optional = true }
wait-timeout = "0.2"
zip = "2.0"
tar = "0.4"
flate2 = "1.0"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
    "ico",
] }
url = "2.5"
ipnet = "2.10"
chrono = "0.4"
lazy_static = "1.4"
shlex = "1.3.0"
sha2 = "0.10"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
rcon = { version = "0.6", features = ["rt-tokio"] }
sculk = { version = "0.3.0", features = ["persist", "clipboard"], optional = true }
java-manager = { path = "../vendor/java-manager" }

[features]
default = [
    "docker",
    "online-tunnel",
    "plugin-local-runtime",
    "plugin-runtime-bridge",
    "plugin-builtin-runtime",
]
docker = ["axum", "tower", "tower-http", "tokio-stream", "mime_guess"]
online-tunnel = ["dep:sculk"]
plugin-local-runtime = ["dep:mlua", "dep:lua_runtime"]
plugin-runtime-bridge = []
plugin-builtin-runtime = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Performance",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
window-vibrancy = "0.6.0"
tauri-plugin-window-state = "2"
font-kit = "0.14"
opener = "0.7"
trash = "5.1"
tauri-plugin-notification = "2"

[dev-dependencies]
tempfile = "3"

[package.metadata.tauri-winres]
OriginalFilename = "sea-lantern.exe"
InternalName = "Sea Lantern"
FileDescription = "Sea Lantern"
Comments = "Licensed under GPL-3.0-only. See bundled LICENSE for redistribution terms."
LegalCopyright = "Copyright (C) SeaLantern Studio. Licensed under GPL-3.0-only."
